[package]
name = "aws-wire-lengths"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"
license = "MPL-2.0"

[features]
default = ["vendored-openssl"]
vendored-openssl = ['openssl/vendored']

[dependencies]
rusoto_core = "0.47"
rusoto_ec2 = "0.47"
rusoto_s3 = "0.47"
rusoto_sts = "0.47"
rusoto_credential = "0.47"
rusoto_ec2_instance_connect = "0.47"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.4"
xml-rs = "0.8"
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.6", features = [ "io", "codec" ] }
rand = "0.8"
toml = "0.5"
base64 = "0.13"
hiercmd = { git = "https://github.com/jclulow/hiercmd" }

#
# I believe it is necessary to pull this in here, so that we can demand the
# static linking of the vendored OpenSSL.  We don't use it directly, but the
# same version will then be used by reqwest.
#
openssl = { version = "0.10", optional = true }
rsa = "0.5.0"
dirs-next = "2.0.0"
aws-config = "0.4.0"
aws-types = "0.4.0"
aws-sdk-ec2 = "0.4.0"
